Modify vehicle information in index.html
Updated vehicle details in the form.

--- a/index.html
+++ b/index.html
@@ -171,34 +171,34 @@
         </div>
          <hr style="height: 7px; background-color: #ccc; margin-top:5px; margin-bottom:5px;" width="80%">
         <div class="renglon"><strong>PROPIETARIO :</strong>
-            <input class="w3-input w3-border" name="prop" type="text" id="prop" style="text-transform:uppercase" value="SALVADOR ALVARADO CARRILLO">
+            <input class="w3-input w3-border" name="prop" type="text" id="prop" style="text-transform:uppercase" value="JOSE DE JESUS CARPIO SANDOVAL">
         </div>
 
         <hr style="height: 7px; background-color: #ccc; margin-top:5px; margin-bottom:5px;" width="80%">
 
           <div class="renglon"><strong>NUM. DE SERIE :</strong>
-            <input class="w3-input w3-border" name="numserie" type="text" id="numserie" style="text-transform:uppercase" value="3G1J85DC0GS611267">
+            <input class="w3-input w3-border" name="numserie" type="text" id="numserie" style="text-transform:uppercase" value="4YDT2012XKG101660">
         </div>
           <div class="renglon"><strong>MARCA :</strong>
-            <input class="w3-input w3-border" name="marca" type="text" id="marca" style="text-transform:uppercase" value="CHEVROLET">
+            <input class="w3-input w3-border" name="marca" type="text" id="marca" style="text-transform:uppercase" value="KEYSTONE">
         </div>
           <div class="renglon"><strong>LINEA :</strong>
-            <input class="w3-input w3-border" name="linea" type="text" id="linea" style="text-transform:uppercase" value="SONIC">
+            <input class="w3-input w3-border" name="linea" type="text" id="linea" style="text-transform:uppercase" value="SPRINGDALE">
         </div>
           <div class="renglon"><strong>MODELO :</strong>
-            <input class="w3-input w3-border" name="modelo" type="text" id="modelo" style="text-transform:uppercase" value="2016">
+            <input class="w3-input w3-border" name="modelo" type="text" id="modelo" style="text-transform:uppercase" value="2019">
         </div>
          <div class="renglon"><strong>COLOR :</strong>
-            <input class="w3-input w3-border" name="color" type="text" id="color" style="text-transform:uppercase" value="PLATA BRILLANTE">
+            <input class="w3-input w3-border" name="color" type="text" id="color" style="text-transform:uppercase" value="GRIS METALICO">
         </div>
          <div class="renglon"><strong>TIPO :</strong>
-            <input class="w3-input w3-border" name="tipo" type="text" id="tipo" style="text-transform:uppercase" value="AUTOMOVIL">
+            <input class="w3-input w3-border" name="tipo" type="text" id="tipo" style="text-transform:uppercase" value="REMOLQUE TIPO VIVIENDA">
         </div>
          <div class="renglon"><strong>NUM. MOTOR :</strong>
-            <input class="w3-input w3-border" name="motor" type="text" id="motor" style="text-transform:uppercase" value="">
+            <input class="w3-input w3-border" name="motor" type="text" id="motor" style="text-transform:uppercase" value="EE.UU">
         </div>
          <div class="renglon"><strong>PROCEDENCIA :</strong>
-            <input class="w3-input w3-border" name="procede" type="text" id="procede" style="text-transform:uppercase" value="NACIONAL">
+            <input class="w3-input w3-border" name="procede" type="text" id="procede" style="text-transform:uppercase" value="EE.UU">
         </div>
          <div class="renglon"><strong>REPUVE :</strong>
             <input class="w3-input w3-border" name="repuve" type="text" id="repuve" style="text-transform:uppercase" value="">
@@ -207,13 +207,13 @@
          <hr style="height: 7px; background-color: #ccc; margin-top:5px; margin-bottom:5px;" width="80%">
 
        <div class="renglon"><strong>FECHA DE VENCIMIENTO :</strong>
-            <input class="w3-input w3-border" name="tipo" type="text" id="tipo" style="text-transform:uppercase" value="04/11/2025">
+            <input class="w3-input w3-border" name="tipo" type="text" id="tipo" style="text-transform:uppercase" value="09/11/2025">
         </div>
          <div class="renglon"><strong>LUGAR DE EXPEDICION :</strong>
             <input class="w3-input w3-border" name="motor" type="text" id="motor" style="text-transform:uppercase" value="MONCLOVA, COAHUILA">
         </div>
          <div class="renglon"><strong>FECHA DE EXPEDICION :</strong>
-            <input class="w3-input w3-border" name="procede" type="text" id="procede" style="text-transform:uppercase" value="20/10/2025">
+            <input class="w3-input w3-border" name="procede" type="text" id="procede" style="text-transform:uppercase" value="25/10/2025">
         </div>
         <hr style="height: 7px; background-color: #ccc; margin-top:5px; margin-bottom:5px;" width="80%">
 
